[gd_scene load_steps=15 format=3 uid="uid://30vmw6kcp6p5"]

[ext_resource type="Script" uid="uid://bkg00yfks4cfs" path="res://player/character.gd" id="1_1t06j"]
[ext_resource type="Texture2D" uid="uid://djnaxh4l4baxh" path="res://player/image_player/heroice1-Sheet.png" id="2_74pxd"]
[ext_resource type="PackedScene" uid="uid://c8mppk6beyulp" path="res://utility/hurt_box.tscn" id="3_xx22o"]
[ext_resource type="Texture2D" uid="uid://sljcmcs2hrch" path="res://texture/exp/หลอดเวลแก้.png" id="4_74pxd"]
[ext_resource type="Texture2D" uid="uid://op1m8fgflmtv" path="res://texture/exp/under_exp.png" id="4_xhlcg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhlcg"]
size = Vector2(7, 3)

[sub_resource type="Animation" id="Animation_xx22o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_74pxd"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_1t06j"]
resource_name = "walk"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74pxd"]
_data = {
&"RESET": SubResource("Animation_xx22o"),
&"idle": SubResource("Animation_74pxd"),
&"walk": SubResource("Animation_1t06j")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xx22o"]
radius = 1.54981
height = 10.1632

[sub_resource type="CircleShape2D" id="CircleShape2D_xx22o"]
radius = 198.252

[sub_resource type="CircleShape2D" id="CircleShape2D_74pxd"]
radius = 67.0075

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xhlcg"]

[node name="Character001" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
script = ExtResource("1_1t06j")

[node name="skill_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 16)
scale = Vector2(0.8125, 0.8125)
texture = ExtResource("2_74pxd")
offset = Vector2(0, -22)
flip_h = true
hframes = 2
vframes = 2

[node name="CollisionShape2Dcharacter" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0.5, 14.5)
shape = SubResource("RectangleShape2D_xhlcg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_74pxd")
}

[node name="Camera2D" type="Camera2D" parent="."]

[node name="hurtbox" parent="." instance=ExtResource("3_xx22o")]
rotation = 3.14159
scale = Vector2(6.75082, -2.58527)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(-9.23872e-07, 0)
scale = Vector2(-0.573476, 1.06567)
shape = SubResource("CapsuleShape2D_xx22o")

[node name="attack" type="Node2D" parent="."]

[node name="ice_cubeTimer" type="Timer" parent="attack"]
wait_time = 1.5

[node name="ice_cubeAttackTimer" type="Timer" parent="attack/ice_cubeTimer"]
wait_time = 0.075

[node name="starbase" type="Node2D" parent="attack"]
unique_name_in_owner = true

[node name="EnemydetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemydetectionArea"]
shape = SubResource("CircleShape2D_xx22o")

[node name="grabarea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="grabarea"]
shape = SubResource("CircleShape2D_74pxd")

[node name="collectarea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="collectarea"]
shape = SubResource("CapsuleShape2D_xhlcg")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labeltime" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 23.0
offset_right = 25.0
offset_bottom = 46.0
grow_horizontal = 2

[node name="expbar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture_over = ExtResource("4_xhlcg")
texture_progress = ExtResource("4_74pxd")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/expbar"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 100.0
offset_bottom = 23.0
text = "Level : 1"
horizontal_alignment = 1

[node name="levelup" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -450.0
offset_right = 100.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2

[node name="lbl_levelup" type="Label" parent="GUILayer/GUI/levelup"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "level up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="upgrade_options" type="VBoxContainer" parent="GUILayer/GUI/levelup"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="sound_levelup" type="AudioStreamPlayer2D" parent="GUILayer/GUI/levelup"]
unique_name_in_owner = true

[node name="coins_display" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 33.0
offset_right = 69.0
offset_bottom = 56.0
text = "coin :"

[connection signal="timeout" from="skill_timer" to="." method="_on_skill_timer_timeout"]
[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="attack/ice_cubeTimer" to="." method="_on_ice_cube_timer_timeout"]
[connection signal="timeout" from="attack/ice_cubeTimer/ice_cubeAttackTimer" to="." method="_on_ice_cube_attack_timer_timeout"]
[connection signal="body_entered" from="EnemydetectionArea" to="." method="_on_enemydetection_area_body_entered"]
[connection signal="body_exited" from="EnemydetectionArea" to="." method="_on_enemydetection_area_body_exited"]
[connection signal="area_entered" from="grabarea" to="." method="_on_grabarea_area_entered"]
[connection signal="area_entered" from="collectarea" to="." method="_on_collectarea_area_entered"]

[editable path="hurtbox"]
